# LitMNIST

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  README.zh.md  inference.py  new.py  pyproject.toml  requirements.txt  test.py  train.py
configs/datamodule/: mnist.yaml
configs/experiment/: example.yaml
configs/litmodule/: mnist.yaml
configs/model/: simple_densenet.yaml
configs/trainer/: default.yaml
data/: .gitignore  MNIST.dvc
docs/: README.cn.md  README.en.md
litmnist/: cli.py  conf.py  config.py  core.py  testing_pipeline.py  training_pipeline.py
litmnist/datamodules/: __init__.py  mnist_datamodule.py
litmnist/litmodules/: __init__.py  mnist_litmodule.py
litmnist/models/: __init__.py  simple_densenet.py
litmnist/utils/: __init__.py  make_logo.py
pl_mnist/: cli.py  core.py
src/: testing_pipeline.py  training_pipeline.py
src/datamodules/: __init__.py  mnist_datamodule.py
src/litmodules/: __init__.py  mnist_litmodule.py
src/models/: __init__.py
src/utils/: __init__.py  make_logo.py
tests/: test_litmnist.py  test_mnist_datamodule.py  test_pl_mnist.py
