[tool.poetry]
name = "LitMNIST"
version = "0.1.0"
description = "PyTorch Lightning demo on the MNIST dataset"
authors = ["XavierJiezou <878972272@qq.com>"]
maintainers = []
readme = "README.md"
homepage = "https://github.com/XavierJiezou/LitMNIST"
repository = "https://github.com/XavierJiezou/LitMNIST"
documentation = "https://github.com/XavierJiezou/LitMNIST"
keywords = ["PyTorch", "PyTorch-Lightning", "MNIST"]
classifiers = ["Topic :: Software Development :: Libraries :: Python Modules"]
packages = [{ include = "litmnist" }]
include = ["CHANGELOG.md"]
exclude = []

[tool.poetry.build]
generate-setup-file = false

[tool.poetry.dependencies]
python = "^3.7"
fire = "^0.4.0"
rich = "^12.3.0"
torch = "^1.11.0"
pytorch-lightning = "^1.6.3"
torchvision = "^0.12.0"
jsonargparse = {extras = ["signatures"], version = "^4.7.2"}
comet-ml = "^3.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
autopep8 = "^1.6.0"
toml = "^0.10.2"
pytest-cov = "^3.0.0"
pylint = "^2.13.8"
gpustat = "^0.6.0"
tensorboard = "^2.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun-pypi"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test"

[tool.poetry.scripts]
litmnist = "litmnist.cli:main"
